--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
       - app-network
 
   backend:
-    image: ${DOCKER_USERNAME}/mean-backend:latest
+    image: ${DOCKER_USERNAME}/dd-backend:latest
     container_name: backend
     restart: unless-stopped
     ports:
@@ -26,7 +26,7 @@ services:
       - app-network
 
   frontend:
-    image: ${DOCKER_USERNAME}/mean-frontend:latest
+    image: ${DOCKER_USERNAME}/dd-frontend:latest
     container_name: frontend
     restart: unless-stopped
     ports:
